<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        tools:ignore="UseLessParent">

        <ImageView
            android:id="@+id/iv_add_image"
            android:layout_width="300dp"
            android:layout_height="350dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/default_image"
            android:src="@drawable/image_search">

        </ImageView>

        <LinearLayout
            android:id="@+id/ll_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_add_image"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_load_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/purple_500"
                android:text="@string/load_image"
                android:textColor="@color/white">

            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_capture_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:visibility="gone"
                android:background="@color/purple_500"
                android:text="@string/capture_image"
                android:textColor="@color/white">

            </androidx.appcompat.widget.AppCompatButton>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_button"
            android:layout_margin="10dp"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/output"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold">
                </TextView>

                <TextView
                    android:id="@+id/tv_result"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/result"
                    android:textColor="#9575CD"
                    android:textSize="20sp">

                </TextView>

            </LinearLayout>
            <TextView
                android:id="@+id/tv_search_google"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/click_to_search"
                android:textSize="20sp">
            </TextView>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
